Working tested code for StabilityEngine contract with collateral deposit and redemption functionality.
- Added test cases to handle deposit and redeem collateral operations with various edge cases, including zero amounts, insufficient tokens, and invalid collateral.
- Implemented logging and assertions for collateral value and dollar amount updates.
- Mocked price feed to simulate different price conditions in tests.
- The system currently doesn't work if the price is below 0. This limitation will be refactored in future updates.
- Mock false data for AMOY testnet will be added in future commits.

While the code has been tested and is working, it will be refactored to address the price limitation and further improvements related to the AMOY testnet mock data.

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,5 +8,9 @@ remappings = [
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts",
 ]
 
+[invariant]
+runs = 50
+depth = 64
+fail_on_revert = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
