--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,10 @@ remappings = [
     "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts",
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts",
 ]
-
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
 [invariant]
 runs = 10
 depth = 10
